# Corewar

./: ._asm  ._ncurses  ._ncurses2  ._op.h  ._zork.cor  .gitignore  CMakeLists.txt  COREWAR.xlsx  Makefile  TODOList.txt  a.out  add_color.c  add_or_zjump_fork_aff.c  author  champion.c  check_num_atoi.c  check_op_h.c  corewar  corewar.h  del_base_to_zero_error.c  fill_bot.c  flags.c  for_instruct_and_live.c  get_binary.c  helltrain.cor  instruct.c  is_reg.c  main.c  map.c  map1.c  map2.c  ncurses_prepare.c  op.c  op.h  print_map.c  sonya.s  st_ld.c  sti.c  sti_ldi.c  take_arg.c  (+1 more)
asm/: Makefile
asm/includes/: asm.h  op.h
asm/src/: head.c  label.c  main.c
corewar_vm/: add_color.c  add_or_zjump_fork_aff.c  champion.c  check_num_atoi.c  check_op_h.c  del_base_to_zero_error.c  fill_bot.c  flags.c  for_instruct_and_live.c  instruct.c  main.c  map.c  map1.c  map2.c  op.c  st_ld.c  take_args.c
dasm/: .nfs.2005109d.0d40  Makefile
dasm/includes/: asm.h  asm.h~
dasm/libft/: Makefile  ft_lstnew.c  ft_memset.c  ft_strcmp.c  get_next_line.c  libft.h
dasm/src/: cmds.c  main.c  output.c
instructs/: in_add.c
libft/: Makefile  author  check.c  fill.c  fill_n_is.c  ft_atoi.c  ft_bzero.c  ft_cntwrd.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lenitoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_printf.h  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  (+37 more)
libft/includes/: libft.h
ncurses/: a.out  make_scene.c  ncurs.h  ncurses_init_colors.c  ncurses_stats.c  proc_key.c
ncurses2/: a.out  main.c  make_scene.c  nc.c  ncurs.h  ncurses_init_colors.c
